tests/testcases/errors/BCE0136-1.boo
"""
BCE0136-1.boo(8,2): BCE0136: Use a colon (:) instead of equal sign (=) for named parameters.
"""

import System.Web
import System.Web.Services

[WebServiceBinding(Name="GoogleSearchBinding")]
class C:
	pass
